--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "test": "jasmine"
   },
   "dependencies": {
+    "highlight.js": "^11.5.1",
     "vue": "^3.2.33"
   },
   "devDependencies": {
@@ -16,6 +18,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "jasmine": "^4.1.0",
     "prettier": "^2.5.1",
     "vite": "^2.9.5"
   }
