--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "files.eol": "\n"
+  "files.eol": "\n",
+  "explorer.fileNesting.patterns": {
+    "package.json": "package-lock.json, yarn.lock",
+    "*.js": "${capture}.spec.js"
+  },
 }
