--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "test": "vitest"
   },
-  "dependencies": {
-    "highlight.js": "^11.5.1",
-    "pinia": "^2.0.14",
-    "vue": "^3.2.37",
-    "vue-router": "^4.0.16"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.3",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint": "^8.17.0",
     "eslint-plugin-vue": "^9.1.0",
+    "eslint": "^8.17.0",
+    "highlight.js": "^11.5.1",
+    "pinia": "^2.0.14",
     "prettier": "^2.6.2",
     "sass": "^1.52.3",
     "vite": "^2.9.11",
-    "vitest": "^0.14.1"
+    "vitest": "^0.14.1",
+    "vue-router": "^4.0.16",
+    "vue": "^3.2.37"
   }
 }
