VSCode: set Prettier as the formatter for JavaScript and Vue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,10 @@
     "package.json": "package-lock.json, yarn.lock",
     "*.js": "${capture}.spec.js"
   },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[vue]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 }
