--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5050",
+    "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "test": "vitest"
+    "test": "vitest --root src/"
   },
   "dependencies": {},
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.3",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@vitejs/plugin-vue": "^3.1.2",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-vue": "^9.1.0",
-    "eslint": "^8.17.0",
-    "highlight.js": "^11.5.1",
-    "pinia": "^2.0.14",
-    "prettier": "^2.6.2",
-    "sass": "^1.52.3",
-    "vite": "^2.9.11",
-    "vitest": "^0.14.1",
-    "vue-router": "^4.0.16",
-    "vue": "^3.2.37"
+    "eslint-plugin-vue": "^9.3.0",
+    "eslint": "^8.22.0",
+    "highlight.js": "^11.6.0",
+    "pinia": "^2.0.23",
+    "prettier": "^2.7.1",
+    "vite": "^3.1.8",
+    "vitest": "^0.24.3",
+    "vue-router": "^4.1.5",
+    "vue": "^3.2.41"
   }
 }
