--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "test": "vitest --root src/"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "eslint": "^8.22.0",
-    "highlight.js": "^11.6.0",
-    "pinia": "^2.0.23",
-    "prettier": "^2.7.1",
-    "vite": "^3.1.8",
-    "vitest": "^0.24.3",
-    "vue-router": "^4.1.5",
-    "vue": "^3.2.41"
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "eslint": "^8.35.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "highlight.js": "^11.7.0",
+    "pinia": "^2.0.32",
+    "prettier": "^2.8.4",
+    "sass": "^1.58.3",
+    "vite": "^4.1.4",
+    "vitest": "^0.29.2",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   }
 }
