--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "test": "vitest --root src/"
   },
+  "dependencies": {
+    "pinia": "^2.1.6",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
+  },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "eslint": "^8.35.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "highlight.js": "^11.7.0",
-    "pinia": "^2.0.32",
-    "prettier": "^2.8.4",
-    "sass": "^1.58.3",
-    "vite": "^4.1.4",
-    "vitest": "^0.32.4",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "@rushstack/eslint-patch": "^1.5.0",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "eslint": "^8.50.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "highlight.js": "^11.8.0",
+    "prettier": "^3.0.3",
+    "sass": "^1.68.0",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.5"
   }
 }
