--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "highlight.js": "^11.8.0",
     "prettier": "^3.0.3",
     "sass": "^1.68.0",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vitest": "^0.34.5"
   }
