--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "test": "vitest --root src/"
+    "test": "vitest --root src/",
+    "test:ui": "vitest --root src/ --ui"
   },
   "dependencies": {
     "pinia": "^2.1.6",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.5.1",
     "@vitejs/plugin-vue": "^4.4.0",
+    "@vitest/ui": "^0.34.6",
     "@vue/eslint-config-prettier": "^8.0.0",
     "bootstrap-icons": "^1.11.1",
     "eslint": "^8.50.0",
