--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:ui": "vitest --root src/ --ui"
   },
   "dependencies": {
+    "bytes": "^3.1.2",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
