Download board list from PlatformIO Only genuine Arduino boards are saved in the source to reduce the size of the repo. Additional boards are downloaded during the build.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
         with:
           node-version: '16'
           cache: 'npm'
+      - run: pip install platformio
+      - run: python update_boards.py
       - run: npm install
       - run: npm run lint
       - run: npm run test
