--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
           node-version: '16'
           cache: 'npm'
       - run: pip install platformio
-      - run: python update_boards.py
+      - run: python update_boards.py --all
       - run: npm install
       - run: npm run lint
       - run: npm run test
