Set `type` to `module` to fix Vite 5 warning "The CJS build of Vite's Node API is deprecated." See https://vitejs.dev/guide/troubleshooting.html#vite-cjs-node-api-deprecated for more details.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@bblanchon/arduinojson-assistant",
   "version": "7.0.0",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/bblanchon/ArduinoJsonAssistant"
