--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "test": "vitest --root src/",
-    "test:ui": "vitest --root src/ --ui"
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "bytes": "^3.1.2",
     "pinia": "^2.1.7",
-    "vue": "^3.3.9",
+    "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.6.0",
-    "@vitejs/plugin-vue": "^4.5.1",
-    "@vitest/ui": "^0.34.6",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "bootstrap-icons": "^1.11.2",
-    "eslint": "^8.54.0",
-    "eslint-plugin-vue": "^9.19.2",
+    "@rushstack/eslint-patch": "^1.7.2",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitest/ui": "^1.2.2",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "bootstrap-icons": "^1.11.3",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.21.1",
     "highlight.js": "^11.9.0",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^5.0.4",
+    "prettier": "^3.2.5",
+    "sass": "^1.70.0",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.0.12",
     "vite-svg-loader": "^5.1.0",
-    "vitest": "^0.34.6"
+    "vitest": "^1.2.2"
   }
 }
