--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "preview": "vite preview",
     "test": "vitest"
   },
+  "dependencies": {
+    "vue": "^3.4.19"
+  },
   "devDependencies": {
     "vite": "^5.1.4",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "@vitejs/plugin-vue": "^5.0.4"
   }
 }
